Add search parameters min_age and max_age

--- a/templates/index.html
+++ b/templates/index.html
@@ -26,10 +26,16 @@
                         places 3rd through 15th. Both ordinal numbers (e.g. 4th) and cardinal numbers (e.g. 4) are
                         accepted.</p>
                 <h4>Optional: <code>season</code></h4>
-                <p>Season of the television show. Valid options are 1 through 13.</p>
+                    <p>Season of the television show. Valid options are 1 through 13.</p>
+                <h4>Optional: <code>minage</code></h4>
+                    <p>Minimum age of contestants to search for. The minimum age allowed on the U.S. show is 21.</p>
+                <h4>Optional: <code>maxage</code></h4>
+                    <p>Maximum age of contestants to search for. The oldest contestant on the show thus far was Charlie
+                    Hides at age 52.</p>
             <h3>Examples (click for JSON output)</h3>
                 <p><a href="http://127.0.0.1:5000/search?name=Monsoon">http://127.0.0.1:5000/search?name=Monsoon</a></p>
                 <p><a href="http://127.0.0.1:5000/search?season=4">http://127.0.0.1:5000/search?season=4</a></p>
                 <p><a href="http://127.0.0.1:5000/search?season=4">http://127.0.0.1:5000/search?outcome=5th</a></p>
 </body>
+<footer><p>Copyright 2021 Julia Prisby</p></footer>
 </html>
